--- a/Statistical_Model.html
+++ b/Statistical_Model.html
@@ -7,9 +7,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Scott Townsend">
-<meta name="dcterms.date" content="2024-12-18">
+<meta name="dcterms.date" content="2024-12-23">
 
-<title>Statistical Model</title>
+<title>Statistical Model of Crime Incidents</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -3074,7 +3074,7 @@ vertical-align: -.125em;
 <header id="title-block-header" class="quarto-title-block default page-columns page-full">
   <div class="quarto-title-banner page-columns page-full">
     <div class="quarto-title column-page">
-      <div class="quarto-title-block"><div><h1 class="title">Statistical Model</h1><button type="button" class="btn code-tools-button dropdown-toggle" id="quarto-code-tools-menu" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi"></i> See code</button><ul class="dropdown-menu dropdown-menu-end" aria-labelelledby="quarto-code-tools-menu"><li><a id="quarto-show-all-code" class="dropdown-item" href="javascript:void(0)" role="button">Show All Code</a></li><li><a id="quarto-hide-all-code" class="dropdown-item" href="javascript:void(0)" role="button">Hide All Code</a></li></ul></div></div>
+      <div class="quarto-title-block"><div><h1 class="title">Statistical Model of Crime Incidents</h1><button type="button" class="btn code-tools-button dropdown-toggle" id="quarto-code-tools-menu" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi"></i> See code</button><ul class="dropdown-menu dropdown-menu-end" aria-labelelledby="quarto-code-tools-menu"><li><a id="quarto-show-all-code" class="dropdown-item" href="javascript:void(0)" role="button">Show All Code</a></li><li><a id="quarto-hide-all-code" class="dropdown-item" href="javascript:void(0)" role="button">Hide All Code</a></li></ul></div></div>
                       </div>
   </div>
     
@@ -3091,7 +3091,7 @@ vertical-align: -.125em;
       <div>
       <div class="quarto-title-meta-heading">Published</div>
       <div class="quarto-title-meta-contents">
-        <p class="date">December 18, 2024</p>
+        <p class="date">December 23, 2024</p>
       </div>
     </div>
     
@@ -3111,7 +3111,10 @@ vertical-align: -.125em;
     <h2 id="toc-title">Table of contents</h2>
    
   <ul>
+  <li><a href="#introduction" id="toc-introduction">Introduction</a>
+  <ul>
   <li><a href="#data-libraries" id="toc-data-libraries">Data &amp; Libraries</a></li>
+  </ul></li>
   <li><a href="#visualizations-of-the-ages-of-offenders-and-victims" id="toc-visualizations-of-the-ages-of-offenders-and-victims">Visualizations of the Ages of Offenders and Victims</a></li>
   <li><a href="#visualizations-of-ethnicity" id="toc-visualizations-of-ethnicity">Visualizations of Ethnicity</a></li>
   <li><a href="#visualizations-of-race" id="toc-visualizations-of-race">Visualizations of Race</a></li>
@@ -3120,14 +3123,19 @@ vertical-align: -.125em;
   <li><a href="#visualizations-of-weapons-used" id="toc-visualizations-of-weapons-used">Visualizations of Weapons used</a></li>
   <li><a href="#visualizations-of-offense" id="toc-visualizations-of-offense">Visualizations of Offense</a></li>
   <li><a href="#visualizations-of-relationship-between-offender-and-victim" id="toc-visualizations-of-relationship-between-offender-and-victim">Visualizations of Relationship between Offender and Victim</a></li>
+  <li><a href="#conclusion" id="toc-conclusion">Conclusion</a></li>
   </ul>
 </nav>
+<section id="introduction" class="level1">
+<h1>Introduction</h1>
+<p>In this analysis, we explore the demographic and situational factors involved in criminal incidents, based on a set of datasets. Through various visualizations, we aim to understand trends in offender and victim characteristics, the nature of offenses, and the types of locations and weapons involved. This report presents insights into offender-victim relationships, age distributions, race, ethnicity, gender, offense types, and other relevant factors to better inform crime prevention strategies.</p>
 <section id="data-libraries" class="level3">
 <h3 class="anchored" data-anchor-id="data-libraries">Data &amp; Libraries</h3>
 </section>
+</section>
 <section id="visualizations-of-the-ages-of-offenders-and-victims" class="level1">
 <h1>Visualizations of the Ages of Offenders and Victims</h1>
-<p>These charts reveal the age distribution of offenders and victims, highlighting whether certain age groups are more frequently involved.</p>
+<p>These visualizations reveal the age distribution of both offenders and victims, helping to identify the most common age groups involved in criminal incidents.</p>
 <div class="cell">
 <details class="code-fold">
 <summary>Show the code</summary>
@@ -3160,13 +3168,11 @@ vertical-align: -.125em;
 </div>
 </div>
 </div>
-<p>The offender age distribution highlights that the most common age bracket for offenders is 20–29, closely followed by the 30–39 age group. This suggests that individuals aged 20–39 are most frequently involved in offenses. Such findings could reflect societal, economic, or psychological factors influencing this demographic’s behavior.</p>
-<p>Similarly, the victim age distribution mirrors this trend, with the 20–29 age bracket being the most commonly affected group. This overlap may indicate that offenders and victims often belong to similar age groups, which could be linked to social environments or interpersonal relationships prevalent within these age ranges.</p>
-<p>These observations are critical for designing targeted intervention strategies, such as community programs, outreach efforts, or educational campaigns, aimed at reducing offenses and protecting the most at-risk age groups.</p>
+<p>The offender age distribution shows that individuals aged 20–29 are most commonly involved in criminal activities, followed closely by those in the 30–39 age group. This suggests that younger adults are more likely to engage in offenses. A similar trend is observed in the victim age distribution, where individuals in their 20s are most frequently victimized. This overlap may reflect social or environmental factors that influence both the likelihood of offending and victimization.</p>
 </section>
 <section id="visualizations-of-ethnicity" class="level1">
 <h1>Visualizations of Ethnicity</h1>
-<p>The visualizations compare ethnicity and race distributions of offenders and victims, identifying potential correlations.</p>
+<p>These charts compare the ethnicity distributions of offenders and victims, providing insight into potential patterns of racial disparities.</p>
 <div class="cell">
 <details class="code-fold">
 <summary>Show the code</summary>
@@ -3199,12 +3205,11 @@ vertical-align: -.125em;
 </div>
 </div>
 </div>
-<p>From these distributions, we can infer important insights regarding ethnicity. Although the charts do not provide a detailed breakdown of specific ethnic groups, they reveal that the majority of both offenders and victims are identified as neither Hispanic nor Latino. This suggests that other ethnic groups may be more frequently involved as either offenders or victims.</p>
-<p>This observation underscores the need for further analysis to understand the sociocultural and systemic factors contributing to these patterns. By identifying the specific ethnic groups represented and examining the contextual factors, policymakers and community leaders can design more effective interventions to address the root causes and disparities associated with crime and victimization.</p>
+<p>The ethnicity distribution reveals that the majority of both offenders and victims are categorized as non-Hispanic and non-Latino. These findings suggest that ethnic groups other than Hispanic or Latino individuals are more frequently involved in criminal incidents, either as offenders or victims. Further analysis is required to identify the underlying sociocultural or systemic factors that contribute to these patterns.</p>
 </section>
 <section id="visualizations-of-race" class="level1">
 <h1>Visualizations of Race</h1>
-<p>These charts compare the distributions of races of the offenders and that of the victims.</p>
+<p>Here, we examine the race distribution of both offenders and victims to explore if any race-related disparities are evident.</p>
 <div class="cell">
 <details class="code-fold">
 <summary>Show the code</summary>
@@ -3237,12 +3242,11 @@ vertical-align: -.125em;
 </div>
 </div>
 </div>
-<p>Among offenders, White individuals and African Americans are represented in the highest proportions, suggesting that these groups are more frequently involved in criminal incidents. This observation may reflect broader societal, economic, or structural factors that influence crime rates and should be further examined to identify underlying causes.</p>
-<p>When examining victims, it appears that White individuals are more likely to be affected. This pattern underscores the need to explore potential connections between offender demographics and victimization trends, considering factors such as geographic location, socio-economic context, and interpersonal dynamics.</p>
+<p>The race distributions indicate that both White and African American individuals are most commonly represented among offenders, which may suggest broader societal or economic factors at play. On the victim side, White individuals appear to be more frequently victimized, which warrants further exploration into the intersection of race, geographic location, and social dynamics.</p>
 </section>
 <section id="visualizations-of-sex" class="level1">
 <h1>Visualizations of Sex</h1>
-<p>These graphs examine the gender distribution, indicating whether males or females dominate certain roles in incidents.</p>
+<p>These graphs examine the distribution of gender among offenders and victims, revealing patterns in male and female involvement in criminal incidents.</p>
 <div class="cell">
 <details class="code-fold">
 <summary>Show the code</summary>
@@ -3275,9 +3279,11 @@ vertical-align: -.125em;
 </div>
 </div>
 </div>
+<p>The distribution of gender reveals a clear predominance of males in both offender and victim categories, though the gap between male and female victims is narrower than expected. This suggests a significant number of female victims, challenging the common perception that males are overwhelmingly victimized in criminal incidents.</p>
 </section>
 <section id="visualizations-of-location" class="level1">
 <h1>Visualizations of Location</h1>
+<p>This chart shows the frequency of criminal incidents based on their location, shedding light on the environments where these offenses are most likely to occur.</p>
 <div class="cell">
 <details class="code-fold">
 <summary>Show the code</summary>
@@ -3295,9 +3301,11 @@ vertical-align: -.125em;
 </div>
 </div>
 </div>
+<p>The majority of incidents occur in residential locations, with a significant number also taking place in public areas such as streets and sidewalks. These findings emphasize the importance of focusing on both private and public safety measures to reduce criminal activities in these common settings.</p>
 </section>
 <section id="visualizations-of-weapons-used" class="level1">
 <h1>Visualizations of Weapons used</h1>
+<p>This visualization provides an overview of the types of weapons involved in criminal incidents, offering insights into the prevalence of various weapon categories.</p>
 <div class="cell">
 <details class="code-fold">
 <summary>Show the code</summary>
@@ -3315,9 +3323,11 @@ vertical-align: -.125em;
 </div>
 </div>
 </div>
+<p>Personal weapons, such as hands, knees, and elbows, are the most commonly used in incidents, underscoring the significant role of physical altercations. Firearms, knives, and other weapons also contribute to the frequency of violent incidents, highlighting the need for targeted interventions around weapon control and de-escalation strategies.</p>
 </section>
 <section id="visualizations-of-offense" class="level1">
 <h1>Visualizations of Offense</h1>
+<p>This chart showcases the various types of offenses that took place during reported incidents, providing a detailed breakdown of the nature and frequency of each offense.</p>
 <div class="cell">
 <details class="code-fold">
 <summary>Show the code</summary>
@@ -3336,6 +3346,7 @@ vertical-align: -.125em;
 </div>
 </div>
 </div>
+<p>This visualization suggests that the most prevalent type of offense involves the destruction of property. Other notable offenses include simple assaults, breaking and entering, drug-related crimes, and weapon violations, each contributing to the overall distribution of criminal activities. This breakdown provides a clear view of the most frequent offenses and their relative occurrence.</p>
 </section>
 <section id="visualizations-of-relationship-between-offender-and-victim" class="level1">
 <h1>Visualizations of Relationship between Offender and Victim</h1>
@@ -3357,6 +3368,12 @@ vertical-align: -.125em;
 </div>
 </div>
 </div>
+<p>This chart, which outlines the relationship between offenders and victims, reveals several key insights. The most prevalent dynamic is that of strangers—incidents where the offender and victim have no prior connection or affiliation. Beyond this, other significant relationships include boyfriends/girlfriends, friends, spouses, and acquaintances. This data highlights the varying degrees of familiarity between offenders and victims, shedding light on the diverse contexts in which these incidents occur.</p>
+</section>
+<section id="conclusion" class="level1">
+<h1>Conclusion</h1>
+<p>This statistical analysis reveals several critical patterns in criminal activity, highlighting age, race, ethnicity, gender, and the nature of offenses. It is evident that younger individuals, particularly males, are most often involved in criminal incidents, both as offenders and victims. The types of incidents, locations, and weapons used also reflect broader social dynamics, offering valuable insights for policy development, resource allocation, and crime prevention strategies.</p>
+<p>By further investigating these trends and integrating additional datasets, law enforcement agencies and policymakers can take more targeted actions to reduce crime rates and enhance public safety.</p>
 </section>
 
 </main>
